[package]
name = "crossworld-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Network abstractions
crossworld-network = { path = "../network", features = ["webtransport"] }

# WebTransport (using wtransport for simplicity)
wtransport.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Game state
dashmap.workspace = true

# Serialization
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true

# Nostr for discovery
nostr-sdk.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true

# Math
glam.workspace = true

# Metrics
prometheus.workspace = true

# Time
tokio-util.workspace = true
