[package]
name = "crossworld-test-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-client"
path = "src/main.rs"

[dependencies]
# WebTransport client
wtransport = { workspace = true, features = ["dangerous-configuration"] }

# Async runtime
tokio.workspace = true

# Serialization (must match server)
bincode.workspace = true
serde.workspace = true

# Math (must match server)
glam.workspace = true

# Utilities
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

# Network abstractions (shared message types)
crossworld-network = { path = "../network" }

# Share types with server (for server-specific types if needed)
crossworld-server.workspace = true
