[package]
name = "testbed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "testbed"
path = "src/main.rs"

[lib]
name = "testbed"
path = "src/lib.rs"

[dependencies]
# Core app framework with runtime support
app = { workspace = true, features = ["runtime"] }

# Scripting (Lua configuration)
scripting.workspace = true

# CLI argument processing
clap.workspace = true

# Physics and rendering
renderer.workspace = true
cube.workspace = true
crossworld-physics.workspace = true

# Core graphics (needed for App trait implementation)
glow.workspace = true
glam.workspace = true
winit.workspace = true
egui.workspace = true
egui_glow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["x11"] }
