[package]
name = "crossworld-world"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebTransport
web-transport = "0.9.6"
web-transport-wasm = "0.5.2"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3.76", features = [
    "Window",
    "console",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WebTransportDatagramDuplexStream",
    "WebTransportCongestionControl",
    "WebTransportError",
    "WebTransportErrorSource",
    "WebTransportErrorOptions",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# Async
futures = "0.3"

# Voxel model loading
dot_vox = "5.1"

# Getrandom (required for WASM)
getrandom = { version = "0.3", features = ["wasm_js"] }

# HTTP client (for loading .vox from URLs) - disabled for now, will implement with fetch API
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
