[package]
name = "crossworld-world"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.cargo-machete]
# wasm-bindgen-futures is used by #[wasm_bindgen] macro for async functions
# getrandom is used by noise crate for WASM builds
ignored = ["wasm-bindgen-futures", "getrandom"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-sign-ext", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# Voxel model loading
dot_vox = "5.1"

# Cube model for procedural generation
cube = { path = "../cube" }

# Noise functions for terrain generation
noise = "0.9"

# Getrandom (required for WASM - used by noise crate)
getrandom = { version = "0.3", features = ["wasm_js"] }

# HTTP client (for loading .vox from URLs) - disabled for now, will implement with fetch API
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
