[package]
name = "worldtool"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "worldtool"
path = "src/main.rs"

[dependencies]
# Nostr
nostr-sdk.workspace = true

# CLI
clap.workspace = true

# Async runtime
tokio.workspace = true

# Environment
dotenvy.workspace = true

# Utilities
anyhow.workspace = true

# Logging
tracing-subscriber = { workspace = true, features = ["fmt"] }
