[package]
name = "xcube"
version = "0.0.1"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Math library
glam = { version = "0.30", features = ["serde"] }

# Error handling
thiserror = "2.0"

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = []
cli = ["dep:clap"]
