[package]
name = "xcube"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "xcube"
path = "src/bin/xcube.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Math library
glam = { version = "0.30", features = ["serde"] }

# Cube crate for octree construction
cube = { path = "../cube" }

# Error handling
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress indicator
indicatif = "0.17"

# Cube library for CSM/BCF export
cube = { path = "../cube" }

[features]
default = []
