[package]
name = "xcube"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "xcube"
path = "src/bin/xcube.rs"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Math library
glam.workspace = true

# Cube crate for octree construction
cube.workspace = true

# Error handling
thiserror.workspace = true

# CLI
clap.workspace = true

# Progress indicator
indicatif.workspace = true

[features]
default = []
