[package]
name = "editor"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Native voxel editor for Crossworld using glow/egui/winit"
license = "MIT OR Apache-2.0"

[[bin]]
name = "editor"
path = "src/main.rs"

[lib]
name = "editor"
path = "src/lib.rs"

[dependencies]
# Core app framework with runtime support
app = { workspace = true, features = ["runtime"] }

# CLI argument processing
clap.workspace = true

# Rendering and voxel core
renderer.workspace = true
cube.workspace = true

# Core graphics (needed for App trait implementation)
glow.workspace = true
glam.workspace = true
winit.workspace = true
egui.workspace = true
egui_glow.workspace = true

# Native file dialogs
rfd.workspace = true

# Configuration
serde.workspace = true
toml.workspace = true
dirs.workspace = true

# Scripting (Lua configuration)
scripting.workspace = true

# Image processing
image.workspace = true

# Nostr integration
crossworld-nostr = { workspace = true, features = ["nip46"] }

# QR code generation for login dialog
qrcode.workspace = true

# Async runtime for NIP-46
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["x11"] }

[dev-dependencies]
